Rajout des amis

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Bonjour le monde! Bonjour </h1>
+    <h1>Bonjour le monde! Bonjour les amis </h1>
 </body>
 </html>
